# MatrixMPI

./: CMakeLists.txt  README.md  main.cpp  main_serial.cpp
math/: CMakeLists.txt
math/include/matrix/: Matrix.h
math/include/matrix/factory/: MatrixFactory.h
math/src/matrix/: Matrix.cpp
math/src/matrix/factory/: MatrixFactory.cpp
